# nrf52840_czujnik_co2_epaper

./: CMakeLists.txt  Kconfig  README.md  README.rst  nrf52840dk_nrf52840.overlay  prj.conf  prj_no_dfu.conf  prj_release.conf  sample.yaml
boards/: nrf21540dk_nrf52840.overlay  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp.overlay
child_image/hci_rpmsg/: prj_no_dfu.conf  prj_release.conf
child_image/mcuboot/: prj_release.conf
child_image/multiprotocol_rpmsg/: prj.conf  prj_release.conf
configuration/nrf52840dk_nrf52840/: pm_static_dfu.yml
configuration/nrf5340dk_nrf5340_cpuapp/: pm_static_dfu.yml
schematics/: PlytkaProcesor.brd  PlytkaZasilanie.brd  SchematProcesor.sch  SchematZasilanie.sch
src/: Arduino_Own.cpp  Arduino_Own.h  PDLS_EXT3_Basic.h  PDLS_EXT3_Basic_Global.h  Screen_EPD_EXT3.cpp  Screen_EPD_EXT3.h  Terminal12x16e.h  Terminal6x8e.h  Terminal8x12e.h  app_config.h  app_event.h  app_task.cpp  app_task.h  chip_project_config.h  fram.cpp  fram.h  hV_Board.cpp  hV_Board.h  hV_Colours565.h  hV_Common.h  hV_Configuration.h  hV_Documentation.h  hV_Font.h  hV_Font_Terminal.cpp  hV_Font_Terminal.h  hV_HAL_Peripherals.h  hV_List_Boards.h  hV_List_Constants.h  hV_List_Screens.h  hV_Screen_Buffer.cpp  hV_Screen_Buffer.h  hV_Utilities_Common.cpp  hV_Utilities_Common.h  hV_Utilities_PDLS.h  main.cpp  scd40.cpp  scd40.h  template.matter  template.zap
src/EPD/: Arduino_Own.cpp  Arduino_Own.h  Screen_EPD_EXT3.cpp  Screen_EPD_EXT3.h  Terminal16x24e.h  hV_Board.h  hV_Colours565.h  hV_Configuration.h  hV_HAL_Peripherals.h  (+6 more)
(+9 files in other folders)
